[runtime] Support Java async execution